--- a/stylesheets/public.css
+++ b/stylesheets/public.css
@@ -1,11 +1,3 @@
-/* Site Colors:
-	#EEE4B9 - light tan
-	#8D0D19 - burgundy
-	#D4E6F4 - very light blue
-	#1A446C - blue grey
-	#689DC1 - light blue
-*/
-
 html { 
 	height: 100%;
 	width: 100%;
@@ -16,7 +8,7 @@ body {
 	margin: 0px;
 	padding: 0px;
 	border: 0px;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-family: Century Gothic, sans-serif;
 	background: #D4E6F4;
 	font-size: 13px;
 	line-height: 15px;
@@ -31,15 +23,35 @@ table, tr, td {
 	line-height: 15px;
 }
 a {
-	color: #8D0D19;
+	color: #EA0046;
 }
 #header {
 	height: 70px;
 	margin: 0px;
 	padding: 0px;
 	text-align: left;
-	background: #1A446C; 
-	color: #D4E6F4;
+	background: #3938CC; 
+	color: #EFDDBF;
+	
+	/*******************/
+background: #303bd3;
+background: -moz-linear-gradient(left,  #303bd3 0%, #bfd255 62%, #f78b38 82%, #ea0046 99%);
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,#303bd3), color-stop(62%,#bfd255), color-stop(82%,#f78b38), color-stop(99%,#ea0046));
+background: -webkit-linear-gradient(left,  #303bd3 0%,#bfd255 62%,#f78b38 82%,#ea0046 99%);
+background: -o-linear-gradient(left,  #303bd3 0%,#bfd255 62%,#f78b38 82%,#ea0046 99%);
+background: -ms-linear-gradient(left,  #303bd3 0%,#bfd255 62%,#f78b38 82%,#ea0046 99%);
+background: linear-gradient(to right,  #303bd3 0%,#bfd255 62%,#f78b38 82%,#ea0046 99%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#303bd3', endColorstr='#ea0046',GradientType=1 );
+
+
+
+
+
+
+
+
+	
+	/*******************/
 }
 #header h1 {
 	padding: 1em;
@@ -48,12 +60,12 @@ a {
 #main {
 	margin: 0px;
 	padding: 0px;
-	height: 600px;
+	height: 400px;
 	width: 100%;
 	background: #EEE4B9;
 }
 #structure {
-	height: 600px;
+	height: 400px;
 	width:100%;
 }
 #footer {
@@ -61,17 +73,47 @@ a {
 	margin: 0px;
 	padding: 1em;
 	text-align: center;
-	background: #1A446C;
-	color: #D4E6F4;
+	font-size: 0.8em;
+	color: #EA0046;
+	
+	/****************/
+background: #f78b38;
+background: -moz-linear-gradient(left,  #f78b38 4%, #ea0046 24%, #303bd3 71%, #bfd255 97%);
+background: -webkit-gradient(linear, left top, right top, color-stop(4%,#f78b38), color-stop(24%,#ea0046), color-stop(71%,#303bd3), color-stop(97%,#bfd255));
+background: -webkit-linear-gradient(left,  #f78b38 4%,#ea0046 24%,#303bd3 71%,#bfd255 97%);
+background: -o-linear-gradient(left,  #f78b38 4%,#ea0046 24%,#303bd3 71%,#bfd255 97%);
+background: -ms-linear-gradient(left,  #f78b38 4%,#ea0046 24%,#303bd3 71%,#bfd255 97%);
+background: linear-gradient(to right,  #f78b38 4%,#ea0046 24%,#303bd3 71%,#bfd255 97%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f78b38', endColorstr='#bfd255',GradientType=1 );
+
+
+	/**************/
+	
+	
 }
 #navigation {
 	width: 150px;
 	padding: 1em 2em;
-	color: #D4E6F4;
-	background: #8D0D19;
+	color: #EA0046;
+	/************/
+	
+background: #bfd255;
+background: -moz-linear-gradient(-45deg,  #bfd255 0%, #303bd3 33%, #ea0046 80%, #f78b38 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#bfd255), color-stop(33%,#303bd3), color-stop(80%,#ea0046), color-stop(100%,#f78b38));
+background: -webkit-linear-gradient(-45deg,  #bfd255 0%,#303bd3 33%,#ea0046 80%,#f78b38 100%);
+background: -o-linear-gradient(-45deg,  #bfd255 0%,#303bd3 33%,#ea0046 80%,#f78b38 100%);
+background: -ms-linear-gradient(-45deg,  #bfd255 0%,#303bd3 33%,#ea0046 80%,#f78b38 100%);
+background: linear-gradient(135deg,  #bfd255 0%,#303bd3 33%,#ea0046 80%,#f78b38 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfd255', endColorstr='#f78b38',GradientType=1 );
+
+
+
+
+	
+	/*****************/
 }
 #navigation a {
-	color: #D4E6F4;
+	color: #EFDDBF;
 	text-decoration: none;
 }
 ul.books {
@@ -82,19 +124,38 @@ ul.chapters {
 	padding-left: 2em;
 	list-style: square;
 }
-.selected {
-	font-weight: bold;
+.selected a{
+	color: #EA0046 !important;
 }
 #chapter {
-	padding-left:2em;
+	text-align:center;
 	vertical-align: top;
-	background: #EEE4B9;
+	/***********************/
+	
+background: #f3e2c7;
+background: -moz-linear-gradient(left,  #f3e2c7 0%, #c19e67 8%, #b68d4c 9%, #e9d4b3 86%, #ffffff 94%, #aa844b 96%, #6e2998 100%);
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,#f3e2c7), color-stop(8%,#c19e67), color-stop(9%,#b68d4c), color-stop(86%,#e9d4b3), color-stop(94%,#ffffff), color-stop(96%,#aa844b), color-stop(100%,#6e2998));
+background: -webkit-linear-gradient(left,  #f3e2c7 0%,#c19e67 8%,#b68d4c 9%,#e9d4b3 86%,#ffffff 94%,#aa844b 96%,#6e2998 100%);
+background: -o-linear-gradient(left,  #f3e2c7 0%,#c19e67 8%,#b68d4c 9%,#e9d4b3 86%,#ffffff 94%,#aa844b 96%,#6e2998 100%);
+background: -ms-linear-gradient(left,  #f3e2c7 0%,#c19e67 8%,#b68d4c 9%,#e9d4b3 86%,#ffffff 94%,#aa844b 96%,#6e2998 100%);
+background: linear-gradient(to right,  #f3e2c7 0%,#c19e67 8%,#b68d4c 9%,#e9d4b3 86%,#ffffff 94%,#aa844b 96%,#6e2998 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e2c7', endColorstr='#6e2998',GradientType=1 );
+
+
+
+
+	
+	
+	/***********************/
 }
 #chapter h2 {
-	color: #8D0D19; 
+	color: #EA0046; 
 	margin-top: 1em;
 }
 #chapter h3 {
-	color: #8D0D19; 
+	color: #EA0046; 
+}
+.chapter-content {
+
 }
 
